Fix tooltip flicker on mosemove

--- a/django_project/dashboards/static/dashboards/css/wb.dashboards.css
+++ b/django_project/dashboards/static/dashboards/css/wb.dashboards.css
@@ -34,10 +34,15 @@ body {
 .toolTip {
   position: absolute;
   display: none;
-  min-width: 80px;
+  min-width: 50px;
   height: auto;
   background: none repeat scroll 0 0 #ffffff;
   border: 1px solid #6F257F;
   padding: 14px;
   text-align: center;
+}
+
+.toolTip ul li{
+    list-style-type: None;
+    text-align: left;
 }
